--- a/demo/index.html
+++ b/demo/index.html
@@ -5,7 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>React UI</title>
-		<script src="./index.test.js"></script>
+		<link rel="stylesheet" href="../index.css" />
+		<link rel="stylesheet" href="./index.css" />
+		<script src="./index.js"></script>
 	</head>
 	<body>
 		<main></main>
